# JarvisAi

./: .gitignore  CHANGELOG.md  Install-Jarvis.ps1  JarvisAI.spec  README.md  Uninstall-Jarvis.ps1  agent.py  agent_logic.py  browser_control.py  check_mic.py  enforcer.py  focus_manager.py  focus_sentinel.py  hud.py  install.py  jarvis_agent.py  jarvis_ui.py  main.py  overlay.py  pyproject.toml  requirements.txt  scribe_overlay.py  session_backup.json  setup.bat  simulate_browsing.py  tab_manager.py  test_agent_simulation.py  test_driver.py  test_porcupine.py  test_porcupine_keyword.py  testvolume_volume.py  tts.vbs  tts_manager.py  verification_output.txt  verify_ghost_writer.py  zombie_overlay.py
.github/workflows/: release.yml
JarvisAi/: agent.py  agent_logic.py  inspect_tools.py  jarvis_ui.py  main.py  requirements.txt  test_agent.py  test_volume.py  tools_output.txt
JarvisAi/docs/: PRD.md
JarvisAi/wakeword/: stt.py
docs/: TESTING.md  demo_plan.md  helpful.md  issues.md
jarvis/: __init__.py  __main__.py  pyproject.toml  requirements.txt
jarvis/activation/: __init__.py  audio_devices.py  clap_detector.py  hotkey.py  mic_manager.py  wake_word.py
jarvis/brain/: __init__.py  conversation.py  orchestrator.py  tool_definitions.py
jarvis/brain/prompts/: system.txt
jarvis/daemon/: __init__.py  cli.py  installer.py  service.py  startup_sequence.py
jarvis/ears/: __init__.py  audio_processing.py  stt_engine.py
jarvis/face/: __init__.py  arc_reactor.py  hud.py  installer_wizard.py  overlay.py  settings_dialog.py  tray.py
jarvis/hands/: __init__.py  platform.py  tool_executor.py
jarvis/hands/tools/: __init__.py  applications.py  browser.py  clipboard.py  file_operations.py  focus_mode.py  media_control.py  news.py  reminders.py  system_controls.py  system_monitor.py  weather.py  web_search.py  window_management.py
jarvis/shared/: __init__.py  config.py  events.py  types.py  windows_apps.py
jarvis/tests/: test_activation.py  test_brain.py  test_daemon.py  test_ears.py  test_face.py  test_hands.py  test_install_bootstrap.py  test_integration.py  test_voice.py
jarvis/voice/: __init__.py  speech_queue.py  tts_engine.py
prompts/: system_prompt.md
tests/: test_os_compat.py  verify_zombie.py
wakeword/: listener.py  stt.py  tts.py
