[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "2.0.0"
description = "Jarvis -- always-on, tool-using desktop AI assistant activated by double-clap detection"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "google-generativeai>=0.8.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pyttsx3>=2.90",
    "PyQt6>=6.6.0",
    "qasync>=0.27.0",
    "pyperclip>=1.8.0",
    "googlesearch-python>=1.2.0",
    "aiohttp>=3.9.0",
    "webrtcvad-wheels>=2.0.10; platform_system=='Windows'",
    "webrtcvad>=2.0.10; platform_system!='Windows'",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "pvporcupine>=3.0.0",
    "psutil>=5.9.0",
    "pynput>=1.7.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
google-cse = ["google-api-python-client>=2.100.0"]
elevenlabs = ["elevenlabs>=1.0.0"]
serpapi = ["google-search-results>=2.4.2"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
jarvis = "jarvis.daemon.cli:main"

[project.urls]
Homepage = "https://github.com/minutecoder34-cmd/JarvisAi"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"jarvis.brain.prompts" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["jarvis/tests"]
asyncio_mode = "auto"
